Basic setup done

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+  <button id="promptButton">New</button>
+  <div id="container">
+
+  </div>
+
   <script src="js/scripts.js"></script>
 </body>
 </html>
